edited with maps

--- a/HyderabadMonuments/build.gradle
+++ b/HyderabadMonuments/build.gradle
@@ -3,7 +3,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.6.+'
+        classpath 'com.android.tools.build:gradle:0.7.+'
+
     }
 }
 apply plugin: 'android'
@@ -23,4 +24,6 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.google.android.gms:play-services:4.0.30'
 }
