--- a/HyderabadMonuments/src/main/AndroidManifest.xml
+++ b/HyderabadMonuments/src/main/AndroidManifest.xml
@@ -4,6 +4,18 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <!--
+         The following two permissions are not required to use
+         Google Maps Android API v2, but are recommended.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
@@ -13,6 +25,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name="com.artifex.hyderabadmonuments.MainActivity"
             android:label="@string/app_name" >
@@ -26,6 +43,17 @@
             android:name="com.artifex.hyderabadmonuments.SecondActivity"
             android:label="@string/title_activity_second" >
         </activity>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBi-sS-RHnKD6dsiF088jZMQnlKKHaaDxo" />
+
+        <activity
+            android:name="com.artifex.hyderabadmonuments.MapActivity"
+            android:label="@string/title_activity_map" >
+        </activity>
     </application>
+
+
 
 </manifest>
