--- a/HyderabadMonuments/src/main/AndroidManifest.xml
+++ b/HyderabadMonuments/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -25,7 +25,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -52,8 +51,10 @@
             android:name="com.artifex.hyderabadmonuments.MapActivity"
             android:label="@string/title_activity_map" >
         </activity>
+        <activity
+            android:name="com.artifex.hyderabadmonuments.DirectionsActivity"
+            android:label="@string/title_activity_directions" >
+        </activity>
     </application>
-
-
 
 </manifest>
